objects/Apex_Debug_Log__c.object
<CustomObject>
    <fields>
        <fullName>Affected_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Captures the User detail who got this exception</description>
        <inlineHelpText>Captures the User detail who got this exception</inlineHelpText>
        <label>Affected User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Apex_Debug_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ApexLogId__c</fullName>
        <label>ApexLogId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apex_Class__c</fullName>
        <label>Apex Class</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ErrorLineNumber__c</fullName>
        <label>ErrorLineNumber</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Estimated_Fix__c</fullName>
        <description>This field is used to show the status of exception</description>
        <inlineHelpText>This field is used to show the status of exception</inlineHelpText>
        <label>Estimated Fix</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Backlog</fullName>
                    <default>true</default>
                    <label>Backlog</label>
                </value>
                <value>
                    <fullName>Data Issue</fullName>
                </value>
                <value>
                    <fullName>Hotfix</fullName>
                </value>
                <value>
                    <fullName>Next Sprint</fullName>
                </value>
                <value>
                    <fullName>Needs Prioritization</fullName>
                </value>
                <value>
                    <fullName>No Fix Required</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ExceptionTypeName__c</fullName>
        <label>ExceptionTypeName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exception_Category__c</fullName>
        <description>Used to store the category around the issue once investigated</description>
        <inlineHelpText>Used to store the category around the issue once investigated</inlineHelpText>
        <label>Exception Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Business Rule</fullName>
                </value>
                <value>
                    <fullName>Custom Apex</fullName>
                </value>
                <value>
                    <fullName>Custom Config</fullName>
                </value>
                <value>
                    <fullName>Data Integrity</fullName>
                </value>
                <value>
                    <fullName>Row Lock Exception</fullName>
                </value>
                <value>
                    <fullName>Standard Salesforce</fullName>
                </value>
                <value>
                    <fullName>Uncategorized</fullName>
                    <default>true</default>
                    <label>Uncategorized</label>
                </value>
                <value>
                    <fullName>User Training</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>InstanceName__c</fullName>
        <label>InstanceName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Updated_On__c</fullName>
        <description>Captures the information around, when the last update was made with the investigation or any event for the issue</description>
        <inlineHelpText>Captures the information around, when the last update was made with the investigation or any event for the issue</inlineHelpText>
        <label>Last Updated On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Login_UserId__c</fullName>
        <label>Login UserId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Login_User_ProfileId__c</fullName>
        <label>Login User ProfileId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <label>Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Method__c</fullName>
        <label>Method</label>
        <length>180</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes_and_Comments__c</fullName>
        <description>This field is used to provide the findings for the issue or any comments related to the issue. Use this to update the investigation details. For resolution steps, we will use another field</description>
        <inlineHelpText>Captures all information around the findings, and exceptions</inlineHelpText>
        <label>Findings and Observations</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Record_Id__c</fullName>
        <label>Record</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ReplayId__c</fullName>
        <label>ReplayId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resolution_Steps_and_Details__c</fullName>
        <description>Field to capture the details and information around the resolution steps taken, and details what changed</description>
        <inlineHelpText>Field to capture the details and information around the resolution steps taken, and details what changed</inlineHelpText>
        <label>Resolution Steps and Details</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Resolved_On__c</fullName>
        <formula>IF(ISPICKVAL(Status__c , 'Fixed and Deployed'), NOW() , NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Resolved On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>RollBar_Integration_status__c</fullName>
        <label>RollBar Integration status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>200</fullName>
                    <color>#33CC00</color>
                    <label>Operation was completed successfully</label>
                </value>
                <value>
                    <fullName>400</fullName>
                    <color>#78C953</color>
                    <label>The request was malformed and could not be parsed.</label>
                </value>
                <value>
                    <fullName>403</fullName>
                    <color>#E27001</color>
                    <label>Access token was missing, invalid, or does not have the necessary permissions.</label>
                </value>
                <value>
                    <fullName>404</fullName>
                    <color>#A845DC</color>
                    <label>The requested resource was not found. This response will be returned if the URL is entirely invalid (i.e. /asdf), or if it is a URL that could be valid but is referencing something that does not exist (i.e. /item/12345).</label>
                </value>
                <value>
                    <fullName>413</fullName>
                    <color>#F3D904</color>
                    <label>The request exceeded the maximum size of 128KB.</label>
                </value>
                <value>
                    <fullName>422</fullName>
                    <color>#A53711</color>
                    <label>The request was parseable (i.e. valid JSON), but some parameters were missing or otherwise invalid.</label>
                </value>
                <value>
                    <fullName>429</fullName>
                    <color>#66E9BD</color>
                    <label>If rate limiting is enabled for your access token, this return code signifies that the rate limit has been reached and the item was not processed.</label>
                </value>
                <value>
                    <fullName>401</fullName>
                    <color>#0B24BE</color>
                    <label>Bad Token</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Stack_Trace__c</fullName>
        <label>Stack Trace</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>Fixed, Pending Deployment</fullName>
                </value>
                <value>
                    <fullName>Investigated</fullName>
                    <label>Investigation Complete</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                    <label>Investigation In Progress</label>
                </value>
                <value>
                    <fullName>No Fix Required</fullName>
                </value>
                <value>
                    <fullName>Resolved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Exception Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Warning</fullName>
                </value>
                <value>
                    <fullName>Info</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User_ID__c</fullName>
        <description>Captures the SFID of the affected user with the exception</description>
        <formula>Affected_User__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Captures the SFID of the affected user with the exception</inlineHelpText>
        <label>User ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Profile__c</fullName>
        <description>Captures the Profile Name for the User Affected with the exception</description>
        <formula>Affected_User__r.Profile.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Captures the Profile Name for the User Affected with the exception</inlineHelpText>
        <label>User Profile</label>
        <type>Text</type>
    </fields>
    <label>Apex Debug Log</label>
    <nameField>
        <displayFormat>L-{00000}</displayFormat>
        <label>Apex Debug Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Apex Debug Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>BatchToForceFullyUpdateJourneys</fullName>
        <columns>NAME</columns>
        <columns>ApexLogId__c</columns>
        <columns>ErrorLineNumber__c</columns>
        <columns>Message__c</columns>
        <columns>Method__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Apex_Class__c</field>
            <operation>equals</operation>
            <value>BatchToForceFullyUpdateJourneys</value>
        </filters>
        <label>BatchToForceFullyUpdateJourneys</label>
    </listViews>
    <listViews>
        <fullName>Logs_Created_Today</fullName>
        <booleanFilter>(1 OR 3) AND 2</booleanFilter>
        <columns>NAME</columns>
        <columns>Message__c</columns>
        <columns>Apex_Class__c</columns>
        <columns>Method__c</columns>
        <columns>Stack_Trace__c</columns>
        <columns>Status__c</columns>
        <columns>Estimated_Fix__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Notes_and_Comments__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Open,In Progress</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Logs Created Today</label>
    </listViews>
    <listViews>
        <fullName>THIS_Year_INVALID_EMAIL_ADDRESS</fullName>
        <columns>NAME</columns>
        <columns>Method__c</columns>
        <columns>Message__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Message__c</field>
            <operation>contains</operation>
            <value>INVALID_EMAIL_ADDRESS</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>12/31/2018 12:00 AM</value>
        </filters>
        <label>THIS Year INVALID_EMAIL_ADDRESS</label>
    </listViews>
    <listViews>
        <fullName>Today</fullName>
        <columns>NAME</columns>
        <columns>Apex_Class__c</columns>
        <columns>Message__c</columns>
        <columns>Method__c</columns>
        <columns>Record_Id__c</columns>
        <columns>Stack_Trace__c</columns>
        <columns>Status__c</columns>
        <columns>RollBar_Integration_status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today</label>
    </listViews>
    <listViews>
        <fullName>Users_exceptions</fullName>
        <columns>NAME</columns>
        <columns>Apex_Class__c</columns>
        <columns>Message__c</columns>
        <columns>Method__c</columns>
        <columns>Stack_Trace__c</columns>
        <columns>Status__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OWNER.ALIAS</field>
            <operation>equals</operation>
            <value>wewo</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Users exceptions</label>
    </listViews>
</CustomObject>